<resources>
    <string name="app_name">硬件测试</string>
    <string name="action_settings">Settings</string>
    <string name="signal_main">消息</string>
    <string name="linkman_main">联系人</string>
    <string name="life_main">生活</string>
    <string name="own_main">我的</string>
    <string name="new_friend">新朋友</string>
    <string name="contacts_nearby">附近的人</string>
    <string name="admin">账号</string>
    <string name="passwd">密码</string>
    <string name="login">登 录</string>
    <string name="login_style">切换验证方式</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="separator">|</string>
    <string name="id_card">身份证:</string>
    <string name="telphone">手机:</string>
    <string name="installed">已安装</string>
    <string name="popular">热门应用</string>
    <string name="send">发送</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="picture">相册</string>
    <string name="nextstep">下一步</string>
    <string name="getver">获取验证码</string>
    <string name="ver">验证码</string>
    <string name="inputver">请填写验证码</string>
    <string name="sure">确认</string>
    <string name="check_passwd">确认密码:</string>
    <string name="phoneoremil">手机号/邮箱号</string>
    <string name="tipspaswwd">密码</string>
    <string name="canle_meaaage">取消</string>
    
    <string name="album_tips">图片和视频</string>
    <string name="album_send">发送</string>
    <string name="album_original_sample">原图</string>
    <string name="album_priview">预览</string>
    <string name="album_select">选择</string>
    <string name="album_editable">编辑</string>

    <string name="id_card_jump">跳过</string>
    <string name="id_card_front">身份证正面</string>
    <string name="id_card_back">身份证背面</string>

    <string name="setting">设置</string>
    <string name="account_and_secure">账号与安全</string>
    <string name="setting_activity_chat_setting">聊天</string>
    <string name="setting_activity_msg_filter">消息过滤</string>
    <string name="setting_activity_general_setting">通用</string>
    <string name="setting_activity_language_setting">语言</string>
    <string name="apk_information">关于软件</string>
    <string name="exit_login">退出</string>
    <string name="help_and_feedback">帮助与反馈</string>

    <string name="thought_return">返回</string>
    <string name="thought_text">思想</string>
    <string name="discuss">点评</string>

    <string name="texteditor">编辑设置</string>
    <string name="textimage">图片</string>
    <string name="texteditorvoice">语音</string>
    <string name="texteditorpickuptext">拾取</string>
    <string name="texteditorsave">保存</string>
    <string name="reportedit">发表</string>
    
    <string name="blacklist">拉黑</string>
    <string name="addfriend">添加好友</string>
    <string name="sendmessage">发消息</string>
    <string name="detailed_information">详细信息</string>

    <string name="announce">公告</string>
    <string name="announce_titlestring">主题：</string>
    <string name="announce_sponsorstring">主办方：</string>
    <string name="announce_addrstring">地址：</string>
    <string name="announce_detial_addrstring">详细地址</string>
    <string name="announce_datestring">日期：</string>
    <string name="announce_timestring">时间：</string>
    <string name="announce_accountstring">人数：</string>
    <string name="announce_ischargestring">是否付费：</string>
    <string name="announce_chargestring">费用：</string>
    <string name="announce_telephonestring">电话：</string>
    <string name="announce_notestring">注意事项</string>
    <string name="announce_cancel_buttonstring">取消</string>
    <string name="announce_publish_buttonstring">发布</string>
    <string name="announce_signup_buttonstring">报名</string>
    
    <string name="conditional_lookup_title">条件查找</string>
    <string name="conditional_lookup_sex">性别</string>
    <string name="conditional_lookup_age">年龄</string>
    <string name="conditional_lookup_residence">现居地</string>
    <string name="conditional_lookup_household_register">户籍地</string>
    <string name="conditional_lookup_credit">福值</string>
    <string name="conditional_lookup_strenght">信用金</string>
    <string name="conditional_lookup_height">身高</string>
    <string name="conditional_lookup_weight">体重</string>
    <string name="conditional_lookup_lookup">查找</string>
    
    <string name="personal_info_head_sculpture_string">头像</string>
    <string name="personal_info_stagename_string">昵称</string>
    <string name="personal_info_admirers_string">查看我的人</string>
    <string name="personal_info_sex_string">性别</string>
    <string name="personal_info_name_string">姓名</string>
    <string name="personal_info_age_string">年龄</string>
    <string name="personal_info_marriage_string">婚姻状况</string>
    <string name="personal_info_height_string">身高</string>
    <string name="personal_info_weight_string">体重</string>
    <string name="personal_info_realname_string">实名认证</string>
    <string name="personal_info_credit_values_string">信用值</string>
    <string name="personal_info_credit_money_string">信用金</string>
    <string name="personal_info_residence_string">现居地</string>
    <string name="personal_info_census_register_string">户籍地</string>
    <string name="personal_info_educational_string">学历证书编号</string>
    <string name="personal_info_relation_string">认证人员信息</string>
    <string name="personal_info_physical_examination_string">体检报告</string>
    <string name="personal_info_motto_string">座右铭</string>
    <string name="personal_info_family_members_string">家庭成员信息</string>
    <string name="personal_info_work_content_string">工作内容</string>
    <string name="personal_info_real_car_string">车子认证</string>
    <string name="personal_info_real_house_string">房产证编号</string>
    <string name="personal_info_violation_record_string">违规纪律</string>
    <string name="personal_info_hobbies_string">兴趣爱好</string>
    <string name="personal_info_checked_string">我查看的人</string>
    <string name="personal_info_step_amount_string">步数</string>
    <string name="personal_info_mind_string">心理测试</string>
</resources>
