<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:gravity="center_vertical"
                android:text="@string/admin"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_administrator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="12"
                android:hint="@string/phoneoremil"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:gravity="center_vertical"
                android:text="@string/tipspaswwd"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_passwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="12"
                android:hint="@string/tipspaswwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_bymessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_style"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/login_main_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="30sp"
            android:background="@color/green"
            android:text="@string/login"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forget_passwd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:gravity="end"
            android:textColor="@color/blue"
            android:text="@string/forget_passwd"
            android:textSize="20sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/separator"
            android:textColor="@color/green" />
        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_register_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:gravity="start"
            android:textColor="@color/blue"
            android:text="@string/register"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
