<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:id="@+id/announce_activity_top">
    <ImageView
        android:id="@+id/anounce_add_activity_return"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:src="@drawable/personreturn"
        android:layout_alignParentStart="true"/>
    </RelativeLayout>

   <ImageView
       android:id="@+id/announce_add_activity_bill"
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:layout_margin="5dp"
       android:src="@drawable/d_guzhang"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_titlestring"/>
        <EditText
            android:id="@+id/announce_add_activity_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="中华人民共和国"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_background" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_sponsorstring"/>
        <EditText
            android:id="@+id/announce_add_activity_sponsor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="中华人民共和国"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_background" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_datestring"/>
        <TextView
            android:id="@+id/announce_add_activity_date_start"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="2019年10月12"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_datestring"/>
        <TextView
            android:id="@+id/announce_add_activity_date_end"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="2019年10月12"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_timestring"/>
        <TextView
            android:id="@+id/announce_add_activity_time_start"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="18:19"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_timestring"/>
        <TextView
            android:id="@+id/announce_add_activity_time_end"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="18:19"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_addrstring"/>
        <TextView
            android:id="@+id/announce_add_activity_addr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            android:hint="地址"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_background"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_detial_addrstring"/>
        <EditText
            android:id="@+id/announce_add_activity_detial_addr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            android:hint="详细地址"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_background"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_telephonestring"/>
        <EditText
            android:id="@+id/announce_add_activity_telephone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            android:hint="固话/手机"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_background" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_accountstring"/>
        <EditText
            android:id="@+id/announce_add_activity_account"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:focusable="true"
            android:hint="50"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:maxLength="4"
            android:inputType="number"
            android:background="@drawable/edit_background" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_chargestring"/>
        <EditText
            android:id="@+id/announce_add_activity_charge"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:maxLength="4"
            android:inputType="number"
            android:background="@drawable/edit_background" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce_notestring"/>
        <EditText
            android:id="@+id/announce_add_activity_note"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/announce_add_activity_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/announce_cancel_buttonstring"/>
        <Button
            android:id="@+id/announce_add_activity_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/announce_publish_buttonstring"/>
    </LinearLayout>
</LinearLayout>
