<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">
        <ImageView
            android:id="@+id/album_tips_return"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/personreturn"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/album_tips_return"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/album_tips"/>
        <Button
            android:id="@+id/album_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:background="@color/green"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/album_send"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/album_girdview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        android:numColumns="4"
        android:columnWidth="90dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_weight="10"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/album_original"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/album_original_sample"/>
        </LinearLayout>


        <TextView
            android:id="@+id/album_privew_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layerType="hardware"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/album_priview"/>

    </RelativeLayout>

</LinearLayout>
