<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:id="@+id/announce_activity_top">

        <ImageView
            android:id="@+id/anounce_add_activity_return"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/personreturn"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/anounce_add_activity_return"
            android:gravity="center"
            android:textSize="@dimen/font_18"
            android:text="@string/register" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/personal_info_stagename_string" />

            <EditText
                android:id="@+id/register_acount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="请填写昵称"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="18sp"
                android:text="@string/telphone" />

            <EditText
                android:id="@+id/register_phonenumber"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:ems="11"
                android:hint="请填写手机号"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/passwd" />

            <EditText
                android:id="@+id/register_passwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="请填写密码"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.yang.Activity.VerifyCodeView
                android:id="@+id/register_verify_code_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/register_getver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:background="@color/green"
                android:text="@string/getver"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register" />

</LinearLayout>
